--- a/styles.css
+++ b/styles.css
@@ -78,3 +78,127 @@ button{
     
 }
     
+.container2{
+    display:flex;
+    flex-direction:column;
+    
+    align-items: center;
+
+    
+    
+}
+
+.squares{
+    display:flex;
+    
+    justify-content: center;
+    padding-left:200px;
+    padding-right:200px;
+    gap:50px;
+    padding-bottom: 5px;
+    
+    
+    
+}
+.square{
+    
+    height:100px;
+    width:100px;
+    border:2px solid black;
+    border-radius: 10px;
+    border-color: #3882f6;
+    
+}
+
+.textimg{
+    display: flex;
+    justify-content: center;
+    padding-left:200px;
+    padding-right:200px;
+    gap:55px;
+    padding-bottom: 50px;
+    
+    
+    
+}
+.txt{
+    width:100px;
+    
+    
+}
+.randtext{
+    height:100px;
+    display:flex;
+    align-items: center;
+}
+
+.randtextbold{
+    font-size: 36px;
+    font-weight:bolder;
+    color:#1f2937
+    
+}
+
+.container3{
+    background-color: #E5E7EB;
+    display:flex;
+    flex-direction:column;
+    align-items: center;
+    padding:100px;
+    
+    
+}
+
+.paragraph{
+    width:700px;
+    font-style: italic;
+    font-size: 36px;
+    color: #1F2937;
+    font-weight: lighter;
+    
+}
+
+.sub2{
+    align-self: flex-end;
+    padding-right:200px;
+    
+}
+
+
+.author{
+    font-weight: bold;
+}
+
+.container4{
+    display:flex;
+    justify-content: center;
+    align-items: center;
+    
+    padding-top: 100px;
+    padding-bottom: 100px;
+}
+
+.calltoaction{
+    width:800px;
+    height:100px;
+    background-color: #3882f6;
+    display:flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.sec1{
+    color:white;
+    font-weight: bold;
+}
+
+
+.sec2{
+    color:#F9FAF8;
+    
+}
+
+button{
+    color:white;
+    border:2px solid white;
+}
